--- a/config.json
+++ b/config.json
@@ -1,19 +1,18 @@
 {
-    "encryptionKey": "",
-    "clientId": "",
-    "authorization":"",
-    "from":"",
-    "to":"",
-    "user":"",
-    "pass":"",
-    "name":"",
-    "tel":"",
-    "key": "",
-    "aid": "", 
-    "domain": "",
-    "entryUrl": "",
-    "proxyAddress": "",
-    "secretId":"",
-    "secretKey":""
+    "encryptionKey": "请求加密的秘钥，vendor.js打印出来",
+    "clientId": "请求加密的秘钥，vendor.js打印出来",
+    "authorization":"请求加密的秘钥，vendor.js打印出来",
+    "from":"自动发送邮件的发件地址",
+    "to":"自动接收邮件的地址",
+    "user":"自动发送邮件的发件邮件账号",
+    "pass":"自动发送邮件的发件邮件密码",
+    "name":"订单的用户名，一般用自己的姓名",
+    "tel":"订单的电话，一般用自己的实际电话号码",
+    "key": "腾讯验证码服务的key，详见：https://decodecaptcha.com/index",
+    "aid": "194445244（固定不用修改，张家港文旅验证码aid）", 
+    "domain": "验证码相关，详见：https://decodecaptcha.com/index",
+    "entryUrl": "验证码相关，详见：https://decodecaptcha.com/index",
+    "proxyAddress": "验证码相关，详见：https://decodecaptcha.com/index",
+    "secretId":"腾讯云账户 SecretId，测试用可以不填",
+    "secretKey":"腾讯云账户 SecretId，测试用可以不填"
   }
-  
